The big bad reformat